--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.522.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
