--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
-    "expo": "^53.0.12",
+    "expo": "53.0.12",
     "expo-constants": "~17.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.1.0",
@@ -22,9 +22,9 @@
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.2.0",
     "nativewind": "latest",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "^0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.6",
     "@types/react": "~19.0.10",
     "ajv": "^8.12.0",
     "eslint": "^9.25.1",
