--- a/app.json
+++ b/app.json
@@ -2,12 +2,13 @@
   "expo": {
     "name": "App-TIU",
     "slug": "App-TIU",
+    "owner": "Nhom5",
     "version": "1.0.0",
     "scheme": "App-TIU",
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/img/LOGO.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router",
@@ -22,8 +23,8 @@
     "icon": "./assets/img/LOGO.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/img/LOGO.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
