--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo-google-fonts/inter": "^0.4.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
+    "dayjs": "^1.11.13",
     "expo": "^53.0.12",
     "expo-constants": "~17.1.4",
     "expo-font": "~13.3.1",
