--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ]
+    "nativewind-env.d.ts",
+    "env.d.ts",
+    "src"
+, "type/Cico.type.tsx"  ]
 }
